A patch from Erwan de FERRIERES "messages are not showing in bluelight theme with IE6" (https://issues.apache.org/jira/browse/OFBIZ-2489) - OFBIZ-2489
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@775292 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bluelight/webapp/bluelight/style.css
+++ b/themes/bluelight/webapp/bluelight/style.css
@@ -437,6 +437,7 @@ A IMG.imageborder {
 }
 
 #messages-container {
+position:relative;
 background-color: #FFFFFF;
 margin: 0 7px 0 7px;
 padding-bottom: 1em;
